# ros_openpose_rgbd

./: 04_keypoints_from_images.py  CMakeLists.txt  README.md  detect_and_draw_joints.py  lib_draw_3d_joints.py  lib_openpose_detector.py  lib_rviz_3d_joints.py  package.xml  read_openpose.py  test_markers.py
config/: pub_rgbd_config.yaml  publish_test_rgbd_data_config.yaml  rviz_color_depth_pcl.rviz  rviz_humans.rviz
data/image1/: cam_params_realsense.json
data/one_image/: body_joints.npy  hand_joints.npy
doc/: experiments.md
doc/video_demo/: video2gif_demo_no_hand.sh  video2gif_demo_with_hand.sh
launch/: publish_test_rgbd_data.launch  run_realsense.launch  run_rviz.launch
scripts/: draw_point_cloud.py  select_data_for_unittest.py
utils/: lib_commons.py  lib_geo_trans.py  lib_io.py  lib_plot.py  lib_ransac.py  lib_rgbd.py  lib_ros_marker.py  lib_ros_rgbd_pub_and_sub.py  lib_rviz_marker.py
