<?xml version="1.0"?>
<package format="2">
  
  <name>ros_openpose_rgbd</name>
  <version>1.2.0</version>
  
  <description> Draw 3D human skeletons in rviz. </description>
  <license>BSD</license>
  
  <author>feiyu</author>
  <maintainer email="felixchenfy@gmail.com">feiyu</maintainer>
  
  <url type="repository">https://github.com/felixchenfy/ros_openpose_rgbd</url>
  
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <exec_depend>message_runtime</exec_depend>
</package>
